VACMS-8510 small screen issues (#8571)
* VACMS-8338 fix media contact field overlapping container

* VACMS-8510 update node edit form layout to fix small screen issues

* VACMS-8510 fix related links breaking out of container lower sizes

* VACMS-8510 rescope views stuff to only target the specific field

* VACMS-8510 any views with rich text

* VACMS-8510 remove commented out part of template

* VACMS-8510 keep buttons aligned to content containers above

* VACMS-8510 adjust spacing / hover state for link teaser paragraph form

--- a/docroot/themes/custom/vagovclaro/assets/scss/components/_fields.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/components/_fields.scss
@@ -71,6 +71,11 @@
   margin: 0;
 }
 
+// Fix autocomplete fields breaking container on smaller screens
+.claro-autocomplete input {
+  width: 100%;
+}
+
 // Right rail field fixes
 #edit-field-links-wrapper {
   .claro-autocomplete input {
